src/styles/utilities.css
@tailwind utilities;

@layer utilities {
  /*
    Handy CSS class to prevent Input background color becomes yellow in Chrome on autofill.
    Works as well with inputs with transparent background.

    https://stackoverflow.com/questions/2781549/removing-input-background-colour-for-chrome-autocomplete
  */
  .remove-autocomplete-styles:-webkit-autofill,
  .remove-autocomplete-styles:-webkit-autofill:hover,
  .remove-autocomplete-styles:-webkit-autofill:focus {
    transition: background-color 5000s;
  }

  .with-medium-text {
    b {
      @apply font-medium text-gray-15;
    }
  }

  .perspective-1000 {
    perspective: 1000px;
  }

  .transform-3d {
    transform-style: preserve-3d;
  }

  .backface-hidden {
    backface-visibility: hidden;
  }

  .rotate-y-180 {
    transform: rotateY(180deg);
  }

  .scrollbar-hidden {
    -ms-overflow-style: none;
    scrollbar-width: none;

    &::-webkit-scrollbar {
      display: none;
    }
  }
}

